query tape function added

--- a/notebooks/example_dmget.ipynb
+++ b/notebooks/example_dmget.ipynb
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 34,
    "id": "14d00fd9",
    "metadata": {},
    "outputs": [],
@@ -47,25 +47,25 @@
     "           'ppname':'ocean_annual_z_1x1deg',\n",
     "           'out':'av',\n",
     "           'local':'annual_5yr',\n",
-    "           'time':'0001*',\n",
+    "           'time':'000*',\n",
     "           'add':'ann',\n",
     "           }\n",
-    "path,_ = get_pathspp(**pathDict,get_static=False)"
+    "path = get_pathspp(**pathDict)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 35,
    "id": "74ed4e24",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'/archive/oar.gfdl.cmip6/ESM4/DECK/ESM4_piControl_D/gfdl.ncrc4-intel16-prod-openmp/pp/ocean_annual_z_1x1deg/av/annual_5yr/ocean_annual_z_1x1deg.0001*.ann.nc'"
+       "'/archive/oar.gfdl.cmip6/ESM4/DECK/ESM4_piControl_D/gfdl.ncrc4-intel16-prod-openmp/pp/ocean_annual_z_1x1deg/av/annual_5yr/ocean_annual_z_1x1deg.000*.ann.nc'"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 36,
    "id": "e000a5ba",
    "metadata": {},
    "outputs": [],
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 37,
    "id": "8b2ccfe6",
    "metadata": {},
    "outputs": [
@@ -96,7 +96,7 @@
        "0"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -107,11 +107,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "00c0b60b",
+   "execution_count": 48,
+   "id": "1b35dc5a-c17b-486e-8c6a-38d1a20a0309",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def query_ondisk(path):\n",
+    "    cmd = (\"dmls -l %s\" %path)\n",
+    "    outputs = os.popen(cmd).read().split('\\n')\n",
+    "    ondisk = {}\n",
+    "    for output in outputs[:-1]:\n",
+    "        if '(REG)' in output:\n",
+    "            ondisk[output.split(' ')[-1]]=True\n",
+    "        else:\n",
+    "            ondisk[output.split(' ')[-1]]=False\n",
+    "    return ondisk"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "id": "62898f68-b069-41fa-8740-2d9926e1d3d0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ondisk = query_ondisk(path)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "id": "59523aec-861b-4ebc-82ff-be0072e92306",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'/archive/oar.gfdl.cmip6/ESM4/DECK/ESM4_piControl_D/gfdl.ncrc4-intel16-prod-openmp/pp/ocean_annual_z_1x1deg/av/annual_5yr/ocean_annual_z_1x1deg.0001-0005.ann.nc': False,\n",
+       " '/archive/oar.gfdl.cmip6/ESM4/DECK/ESM4_piControl_D/gfdl.ncrc4-intel16-prod-openmp/pp/ocean_annual_z_1x1deg/av/annual_5yr/ocean_annual_z_1x1deg.0006-0010.ann.nc': False}"
+      ]
+     },
+     "execution_count": 60,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ondisk"
+   ]
   }
  ],
  "metadata": {
